# UltraRAG-AWP

./: .claudeignore  .env.example  .gitignore  .markdownlint.json  CLAUDE.md  README.md  eval_result.json  package-lock.json  package.json  pyproject.toml  vitest.config.js  知识图谱测试结果.txt
.claude/: settings.json  settings.local.json
.cursor/skills/python-code-comments/: SKILL.md
custom_app/: app.py  db.py  logging_setup.py
custom_app/api/: __init__.py  admin_agents.py  admin_models.py  chat.py  kb.py  roles.py  sessions.py
custom_app/frontend/: admin.html  admin.js  index.html  login.html  main.js  style.css
custom_app/frontend/__tests__/: admin.test.js  agentSelector.test.js  agentToolsPanel.test.js  boot.test.js  brokenImagePlaceholder.test.js  chatApi.test.js  chatMessage.test.js  confirmModal.test.js  imageLightbox.test.js  kbApi.test.js  kbSelector.test.js  main.test.js  sanitizeHtml.test.js  sourcePanel.test.js  statusBadge.test.js  toast.test.js  uploadGuards.test.js
custom_app/frontend/components/: agentSelector.js  agentToolsPanel.js  chatMessage.js  confirmModal.js  imageLightbox.js  kbSelector.js  sourcePanel.js  statusBadge.js  toast.js
custom_app/frontend/css/: style.css
custom_app/frontend/js/: main.js
custom_app/frontend/services/: chatApi.js  kbApi.js  sessionApi.js
custom_app/frontend/utils/: brokenImagePlaceholder.js  sanitizeHtml.js  uploadGuards.js
custom_app/repositories/: __init__.py  agent_config_repository.py  base.py  chat_agent_repository.py  chat_model_repository.py  document_repository.py  job_repository.py  kb_repository.py  kg_repository.py  postgres_provider.py  role_repository.py  session_repository.py
custom_app/scripts/: __init__.py  apply_phase6_1_migration.py  apply_phase6_2_migration.py  apply_phase7_2_a_migration.py  apply_phase7_migration.py  backfill_context.py  bootstrap_postgres_database.py  eval_custom_app.py  eval_heading_path.py  eval_queries.txt  eval_queries_example.txt  extract_eval_queries.py  fix_uploaded_status.py  generate_eval_queries.py  migrate_faiss_to_qdrant.py  migrate_kg_to_neo4j.py  migrate_sqlite_to_postgres.py  phase8_2_compare.py  probe_phase5_services.py  toggle_context_for_eval.py  verify_general_kb_smoke.py  verify_phase5_dual_backend.py  verify_queries_agv.txt  verify_sop_regression.py
custom_app/services/: agent_config_store.py  agent_runner.py  chat_adapter_factory.py  doc_status_recovery.py  docx_parser.py  filename_safe.py  google_embedder.py  job_executor.py  kg_extractor.py  kg_search.py  llm_adapter.py  prompt_renderer.py  rag_runner.py  session_store.py
custom_app/services/chunking/: __init__.py  contextual.py
custom_app/services/eval/: __init__.py  dataset.py  metrics.py  runner.py  schema.py
custom_app/services/kgstore/: __init__.py  base.py  neo4j_store.py  sqlite_store.py
custom_app/services/parsers/: __init__.py  base.py  docling_parser.py  factory.py  markdown_parser.py  mineru_parser.py  schema.py
custom_app/services/providers/: __init__.py  (+6 more)
custom_app/utils/: chunks_io.py  local_reranker.py  ssrf_guard.py
data/agv_documents/: Flexi Case SOP.docx  Inserting SOP.docx  Left Arm FTC SOP.docx  Master Link Down SOP.docx
data/eval/: README.md  agv_demo.jsonl  agv_demo_manual.jsonl.example  ifs_docs.jsonl  ifs_docs_manual.jsonl.example  phase8_2_comparison.md
docs/: AGV_RAG_系统方案.md  MANUAL_TESTING.md  WeKnora智能推理与UltraRAG移植指南.md  手动执行的命令.txt  项目目录结构说明.md
docs/Phase1/: 01_环境与配置.md  02_DOCX解析入库.md  03_向量索引构建.md  04_问答流程.md  05_优化版实施清单.md  README.md
docs/Phase10/: README.md
docs/Phase11/: PHASE_11_1_PLAN.md  PHASE_11_2_PLAN.md  README.md
docs/Phase12/: README.md
docs/Phase2/: 00_阶段计划.md  01_数据模型与SQLite设计.md  02_知识库API设计.md  03_任务编排与状态流转.md  04_验收与测试清单.md  05_能力增强路线_参考WeKnora.md  06_RBAC权限设计.md  README.md
docs/Phase3/: 00_阶段计划.md  01_前端技术架构.md  02_界面设计规范.md  03_页面功能设计.md  04_API对接设计.md  05_开发任务清单.md  06_对齐WeKnora界面及智能推理.md  07_Figma结构与页面清单.md  07_智能推理移植详细计划.md  KG_REACT_AGENT.md  README.md  UI_OPTIMIZATION.md
docs/Phase4/: PHASE4_PLAN.md  VERIFICATION_CHECKLIST.md  comparing_custom_app_vs_rag_anything.md
docs/Phase5/: PHASE5_OUTLINE.md  PHASE5_PLAN.md
docs/Phase6/: PHASE_6_1_PLAN.md  PHASE_6_2_PLAN.md  PHASE_6_COMPLETION.md
docs/Phase7/: PHASE_7_1_COMPLETION.md  PHASE_7_2_A_PLAN.md  PHASE_7_PLAN.md
docs/Phase8/: EVAL_DATASET_EXPANSION_GUIDE.md  MANUAL_TESTING.md  PHASE_8_0_PLAN.md  PHASE_8_1_PLAN.md  PHASE_8_2_PLAN.md  PHASE_8_3_PLAN.md  PHASE_8_SUMMARY.md  README.md
docs/Phase9/: README.md
examples/: agv_index_only.yaml  agv_rag.yaml
migrations/postgres/: 001_phase6_1_doc_status.sql  002_phase6_2_kg_doc_id.sql  003_phase7_chat_models.sql  004_phase7_2_a_agent_configs.sql
prompt/: agv_agent_system.jinja  agv_qa_rag.jinja  kg_extract_entities.jinja  kg_extract_relations.jinja
servers/generation/: parameter.yaml
servers/retriever/: parameter.yaml
tests/: test_agent_runner_kg_and_synthesis.py  test_chat_stream_profile.py  test_chunking_contextual.py  test_docling_parser.py  test_docx_parser_schema.py  test_docx_parser_sliding.py  test_embedder_heading_path.py  test_eval_dataset.py  test_eval_generators.py  test_eval_metrics.py  test_eval_runner.py  test_faiss_vectorstore.py  test_function_calling_closed_loop.py  test_hotfix_inline_image_position.py  test_hotfix_kg_search_incoming.py  test_hotfix_unicode_filename.py  test_ingest_context_stage.py  test_kb_type_routing.py  test_kgstore.py  test_markdown_parser.py  test_mineru_parser.py  test_parser_factory.py  test_phase2_kb_api.py  test_phase3_static_routes.py  test_phase4_integration.py  test_phase6_1_doc_status.py  test_phase6_1_ingest_per_doc.py  test_phase6_2_chunks_io.py  test_phase6_2_kgstore_delete_by_doc.py  test_phase6_ingest_kg.py  test_phase7_1_adapters.py  test_phase7_2_a_admin_agents_api.py  test_phase7_2_a_agent_tools_shape.py  test_phase7_2_a_chat_agent_repository.py  test_phase7_2_a_prompt_renderer.py  test_phase7_2_a_runner_agent_config.py  test_phase7_admin_models_api.py  test_phase7_chat_model_repository.py  test_phase7_providers_and_ssrf.py  test_qdrant_vectorstore.py  (+19 more)
(+53 files in other folders)
