[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ultrarag"
version = "0.3.0"
description = "UltraRAG"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "fastmcp==3.3.1",
    "mcp",
    "rich",
    "pandas",
    "Jinja2",
    "openai",
    "httpx[socks]",
    "python-dotenv",
    "PyYAML",
    "tqdm",
    "requests",
    "orjson",
    "tabulate",
    "aiohttp",
    "pillow",
    "flask",
    "numpy",
    "fakeredis",
    "pymilvus",
    "pypinyin",
    "charset-normalizer",
    "python-docx",
    "pymupdf",
    "chonkie",
    "tiktoken",
]

[project.optional-dependencies]
retriever = [
    "infinity-emb",
    "sentence-transformers",
    "openai",
    "bm25s",
    "faiss-gpu-cu12",
    "exa_py",
    "tavily-python",
    "pymilvus",
    "numba",
    "torch",
    "fastapi",
    "uvicorn",
    "pydantic",
]

generation = [
    "vllm>=0.13.0",
    "openai",
    "transformers",
    "torch",
]

evaluation = [
    "rouge-score",
    "pytrec-eval-terrier",
]

corpus = [
    "mineru[core]",
]

# Phase 4.1: custom_app 通用文档解析（PDF / 图片 / 通用 DOCX / MD）
# 安装：uv sync --extras parsing
# 注意：MinerU 首次运行会自动下载 GB 级模型；Docling 也较大
# Office 文档（.docx/.pptx 等走 MinerU 路径时）需要系统装 LibreOffice CLI
parsing = [
    "mineru[core]",
    "docling",
]

# Phase 5.1: 存储栈迁移（Qdrant 向量库 + PostgreSQL 元数据库）
# 安装：uv sync --extras storage
# 部署：Qdrant + Postgres 都是局域网 Docker 服务，连接信息见 .env
storage = [
    "qdrant-client>=1.10",      # 官方 Python 客户端（也支持纯 HTTP）
    "psycopg[binary,pool]>=3.2", # PostgreSQL driver + 连接池
]

all = [
    "ultrarag[retriever]",
    "ultrarag[generation]",
    "ultrarag[corpus]",
    "ultrarag[evaluation]",
    "ultrarag[parsing]",
    "ultrarag[storage]",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ultrarag = "ultrarag.client:main"

[dependency-groups]
dev = [
    "ruff",
    "ipython",
    "jupyter",
    "pytest",
]

[tool.uv]
package = true

# Phase 4.1: 注册自定义 marker
# 集成测试需要重型外部依赖时用以下 marker 标记，CI 默认 skip：
#   @pytest.mark.requires_mineru   —— 需要 mineru CLI + 模型（GB 级）
#   @pytest.mark.requires_docling  —— 需要 docling 包 + 模型
# 本地手动跑：pytest -m requires_mineru
[tool.pytest.ini_options]
markers = [
    "requires_mineru: integration test that needs real MinerU CLI + models",
    "requires_docling: integration test that needs real Docling installation",
    "requires_qdrant: integration test that needs real Qdrant service",
    "requires_postgres: integration test that needs real PostgreSQL service",
    "requires_neo4j: integration test that needs real Neo4j service",
]